# live_object_explorer

./: .clang-tidy  .clangd  .cruft.json  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  supported_settings.toml
.github/workflows/: build.yml
src/: component_picker.cpp  component_picker.h  dllmain.cpp  gui.cpp  gui.h  native_section.cpp  native_section.h  object_link.cpp  object_link.h  object_window.cpp  object_window.h  pch.h  string_helper.cpp  string_helper.h  theme.cpp  theme.h  version.inl.in  versioninfo.rc
src/components/: abstract.cpp  abstract.h  array_component.cpp  array_component.h  bool_component.cpp  bool_component.h  const_component.cpp  const_component.h  delegate_component.cpp  delegate_component.h  enum_component.cpp  enum_component.h  enum_field_component.cpp  enum_field_component.h  integral_component.cpp  integral_component.h  multicast_delegate_component.cpp  multicast_delegate_component.h  name_component.cpp  name_component.h  object_component.cpp  object_component.h  object_field_component.cpp  object_field_component.h  persistent_obj_ptr_component.cpp  persistent_obj_ptr_component.h  scalar_component.cpp  scalar_component.h  str_component.cpp  str_component.h  struct_component.cpp  struct_component.h  struct_field_component.cpp  struct_field_component.h  text_component.cpp  text_component.h  unknown_component.cpp  unknown_component.h  weak_obj_component.cpp  weak_obj_component.h
src/gui/: gui.cpp  gui.h  object.cpp  object.h
src/injected_imgui/: auto.cpp  auto.h  dx11.cpp  dx11.h  dx12.cpp  dx12.h  dx9.cpp  dx9.h  hook.cpp  hook.h  internal.cpp  internal.h
